# SlicerMalariaDetection

./: CMakeLists.txt  README.md
MalariaAutoDetection/: CMakeLists.txt  MalariaAutoDetection.py
MalariaAutoDetection/Resources/UI/: MalariaAutoDetection.ui
